--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "eslint-plugin-jest": "^24.3.5",
     "immer": "^7.0.9",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -48,5 +50,11 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.0"
+  },
+  "resolutions": {
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "**/react": "17.0.1",
+    "**/react-dom": "17.0.1"
   }
 }
