--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Actuali-toute",
+  "name": "Actuali-toute: Agrégateur d'actualités francophones",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "actu.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
