--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "immer": "^7.0.9",
     "prop-types": "^15.7.2",
     "react-bootstrap": "^1.5.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.1",
     "react-test-renderer": "^17.0.1",
     "web-vitals": "^0.2.4"
