--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "bootstrap": "^4.6.0",
     "eslint-plugin-jest": "^24.3.5",
     "immer": "^7.0.9",
+    "postcss-selector-parser": "^5.0.0",
     "prop-types": "^15.7.2",
     "react-bootstrap": "^1.5.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll-up": "^1.3.7",
     "react-test-renderer": "^17.0.1",
     "web-vitals": "^0.2.4"
   },
